# snakemake-storage-plugin-fsspec

./: .gitignore  README.md  pyproject.toml
src/snakemake_storage_plugin_fsspec/: __init__.py
tests/: test_plugin.py
workflow/: Snakefile  config.yaml
workflow/rules/: ai-example.smk  examples.smk
workflow/scripts/: remote_input_local_output.py
