[project]
name = "snakemake-storage-plugin-fsspec"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = ["snakemake-interface-common (>=1.20.1,<2.0.0)", "snakemake-interface-storage-plugins (>=4.2.1,<5.0.0)", "fsspec (>=2025.5.1,<2026.0.0)", "snakemake (>=9.8.0,<10.0.0)", "paramiko (>=3.5.1,<4.0.0)"]
repository = "https://github.com/your/plugin"
documentation = "https://snakemake.github.io/snakemake-plugin-catalog/plugins/storage/fsspec.html"
[[project.authors]]
name = "Paul Gierz"
email = "pgierz@awi.de"

[build-system]
requires = [ "poetry-core>=2.0.0,<3.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
[[tool.poetry.packages]]
include = "snakemake_storage_plugin_fsspec"
from = "src"


[tool.poetry.group.dev.dependencies]
ruff = "^0.12.3"
coverage = "^7.9.2"
pytest = "^8.4.1"

